@@ -580,6 +580,7 @@ All (GUI):
 - Allow specifying all wxFlexGridSizer parameters in XRC (Steffen Olszewski).
 - Close wxLogWindow automatically if it's the last remaining top level window.
 - Implement clipping for wxSVGFileDC (Steve Benbow).
+- Added wxDirCtrl::GetPath() (troelsk).
 
 wxGTK:
 
